# multi_agent

./: .env.example  .gitignore  REASONIX.md  pyproject.toml  requirements.txt
configs/: baseline.yaml  k1.yaml  k2.yaml  k5.yaml  model_pool.yaml
scripts/: smoke_providers.py  test_each_model.py
src/: __init__.py  agent.py  config.py  dataset.py  debate.py  evaluation.py  experiment.py  graph_utils.py  run_all.py  sandbox.py
src/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
src/tests/: mock_provider.py  test_debate.py  test_graph_utils.py  test_integration.py  test_model_pool.py  test_parallel.py
