[project]
name = "multi_agent"
version = "0.1.0"
description = "Multi-Agent Debate Framework for Code Generation"
requires-python = ">=3.12"
dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.39.0",
    "datasets>=2.14.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0",
]
